--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@artsy/fresnel": "^3.1.0",
+    "antd": "^4.17.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
